--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
 title: Monochrome | A minimal, responsive Jekyll blog theme
 description: "A minimal, responsive, ready to use blog template, built with Jekyll."
-url: "http://www.benjaminran.github.io/monochrome"
+url: "http://www.benjaminran.github.io/"
 author:
   name: "Benjamin Ran"
   email: "benjaminran2@gmail.com"
-  url: "https://thereviewindex.com"
+  url: "http://www.benjaminran.github.io/"
 
 # Build settings
-baseurl: /baseurl # Change this to your relative path (ex: /blog/), or leave just a /
+baseurl: / # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
 destination: ./_site
