--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Monochrome | A minimal, responsive Jekyll blog theme
-description: "A minimal, responsive, ready to use blog template, built with Jekyll."
+title: Benjamin Ran
+description: "My personal website."
 url: "http://www.benjaminran.github.io/"
 author:
   name: "Benjamin Ran"
@@ -13,7 +13,7 @@ markdown: kramdown
 source: .
 destination: ./_site
 permalink: /:title
-paginate: 8
+#paginate: 8
 paginate_path: /page:num/
 
 # Default values
