--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "resume"]
 	path = _resume
-	url = git@github.com:benjaminran/resume.git
+	url = https://github.com/benjaminran/resume.git
